# vibe-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-29-vibe-agent-implementation.md
docs/superpowers/specs/: 2026-04-29-vibe-agent-design.md
src/air_agent/: __init__.py  agent.py  subagent.py  types.py
src/air_agent/mcp/: client.py
src/air_agent/tools/: __init__.py  base.py  registry.py
src/vibe_agent/: __init__.py  agent.py  config.py  subagent.py
src/vibe_agent/mcp/: __init__.py  client.py  tool_adapter.py
src/vibe_agent/tools/: registry.py
tests/: test_agent.py  test_config.py  test_mcp_adapter.py  test_streaming.py  test_subagent.py  test_tools.py  test_types.py
