[project]
name = "air-agent"
version = "0.1.0"
description = "Lightweight Python AI agent with OpenAI tool calling, MCP support, and parallel subagents"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "mcp>=1.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
